--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "he": "^1.2.0",
     "markdown-it": "^13.0.1",
     "mkdirp": "^3.0.1",
+    "netlify-cli": "^21.5.0",
     "sanitize-filename": "^1.6.3",
     "turndown": "^7.2.0",
     "xml2js": "^0.6.2"
