Add blog analytics agent with Express.js server and dashboard

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "escape-html": "^1.0.3",
     "escape-string-regexp": "^4.0.0",
     "esprima": "^4.0.1",
+    "express": "^4.18.2",
     "extend-shallow": "^2.0.1",
     "fast-glob": "^3.3.3",
     "fastq": "^1.19.1",
@@ -143,6 +144,7 @@
     "multimatch": "^5.0.0",
     "mustache": "^4.2.0",
     "neo-async": "^2.6.2",
+    "node-fetch": "^2.7.0",
     "normalize-path": "^3.0.0",
     "nunjucks": "^3.2.4",
     "object-assign": "^4.1.1",
