Fix mobile menu visibility and functionality

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,51 +2,13 @@
   command = "npm run build"
   publish = "_site"
 
-[build.environment]
-  NODE_VERSION = "18"
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self'"
-
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/css/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/js/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/img/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.html"
-  [headers.values]
-    Cache-Control = "public, max-age=3600"
+[dev]
+  command = "npm start"
+  targetPort = 8080
+  publish = "_site"
+  framework = "#custom"
 
 [[redirects]]
   from = "/*"
   to = "/404.html"
-  status = 404
-
-[dev]
-  command = "npm run start"
-  port = 8080
-  targetPort = 8080
-  publish = "_site"
-  autoLaunch = true 
+  status = 404 
